<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/a"
        android:gravity="center"
        android:background="#DA5F6A"
        android:src="@drawable/warning"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:id="@+id/text_dialog"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:gravity="center_horizontal"
        android:layout_below="@+id/a"
        android:layout_centerHorizontal="true" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/text_dialog">


    <Button
        android:id="@+id/btn_ok_dialog"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:background="@color/DeepSkyBlue"
        android:textColor="#ffffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="214dp"
        app:layout_constraintHorizontal_bias="0.942" />

        <Button
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_ok_dialog"
            android:background="@color/DeepSkyBlue"
            android:textColor="#ffffffff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="214dp"
            app:layout_constraintHorizontal_bias="0.017" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>